<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_questions"
        android:textSize="30sp"
        android:textColor="@color/main_color"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvFeedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_feedback"
        android:textSize="15sp"
        android:textColor="@color/main_color"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        />

    <EditText
        android:id="@+id/etFeedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/hint_feedback"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnAnswer"
        app:layout_constraintTop_toBottomOf="@id/tvFeedback"
        />

    <Button
        android:id="@+id/btnAnswer"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_color"
        android:text="@string/text_feedback"
        android:textSize="11sp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFeedback"
        />

    <ImageButton
        android:id="@+id/ibSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/ic_search"
        android:layout_marginTop="20dp"
        android:background="?selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/etFeedback"
        app:layout_constraintRight_toRightOf="parent"
        />
    
    <EditText
        android:id="@+id/etSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_search"
        android:lines="1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/etFeedback"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ibSearch"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/etSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_question"
        tools:itemCount="10"

        />

</androidx.constraintlayout.widget.ConstraintLayout>